--- a/homework-week-4-aleynamandaci/homework-week-4-aleynamandaci/Base.lproj/Main.storyboard
+++ b/homework-week-4-aleynamandaci/homework-week-4-aleynamandaci/Base.lproj/Main.storyboard
@@ -25,6 +25,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="0yl-gH-6dB" id="HCC-Gc-oGi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
