--- a/homework-week-4-aleynamandaci/homework-week-4-aleynamandaci/TableViewCell.xib
+++ b/homework-week-4-aleynamandaci/homework-week-4-aleynamandaci/TableViewCell.xib
@@ -9,42 +9,61 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="94" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="homework_week_4_aleynamandaci" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="374" height="94"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="homework_week_4_aleynamandaci" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="486" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="374" height="94"/>
+                <rect key="frame" x="0.0" y="0.0" width="486" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e68-JG-wz2">
-                        <rect key="frame" x="0.0" y="0.0" width="94" height="94"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e68-JG-wz2">
+                        <rect key="frame" x="5" y="3" width="113" height="113"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="113" id="YVz-4t-Y5H"/>
+                            <constraint firstAttribute="width" constant="113" id="naS-wF-uMb"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oOM-in-r5f">
-                        <rect key="frame" x="102" y="7" width="117" height="36"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oOM-in-r5f">
+                        <rect key="frame" x="133" y="10" width="59" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OM6-li-HTZ">
-                        <rect key="frame" x="102" y="55" width="48" height="24"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OM6-li-HTZ">
+                        <rect key="frame" x="138" y="60" width="64" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Chu-ku-TWI">
-                        <rect key="frame" x="227" y="29" width="140" height="36"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Chu-ku-TWI">
+                        <rect key="frame" x="242" y="30" width="52" height="59"/>
                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="OM6-li-HTZ" firstAttribute="top" secondItem="oOM-in-r5f" secondAttribute="bottom" constant="20" id="5HQ-rG-2BF"/>
+                    <constraint firstItem="Chu-ku-TWI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="30" id="IDM-fV-2AV"/>
+                    <constraint firstItem="oOM-in-r5f" firstAttribute="leading" secondItem="e68-JG-wz2" secondAttribute="trailing" constant="15" id="KLq-Ro-dEh"/>
+                    <constraint firstItem="oOM-in-r5f" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="SvE-Ah-4Ct"/>
+                    <constraint firstAttribute="bottom" secondItem="e68-JG-wz2" secondAttribute="bottom" constant="3" id="ZIY-zn-bQD"/>
+                    <constraint firstItem="Chu-ku-TWI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="b82-Ug-G2K"/>
+                    <constraint firstItem="Chu-ku-TWI" firstAttribute="leading" secondItem="oOM-in-r5f" secondAttribute="trailing" constant="50" id="kmf-E7-t6U"/>
+                    <constraint firstItem="e68-JG-wz2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="o8O-ez-WU4"/>
+                    <constraint firstItem="Chu-ku-TWI" firstAttribute="leading" secondItem="OM6-li-HTZ" secondAttribute="trailing" constant="40" id="w1Q-II-HBf"/>
+                    <constraint firstItem="e68-JG-wz2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="zFd-gV-2dt"/>
+                    <constraint firstItem="OM6-li-HTZ" firstAttribute="leading" secondItem="e68-JG-wz2" secondAttribute="trailing" constant="20" id="zLQ-AM-zEI"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="176.81159420289856" y="112.5"/>
+            <connections>
+                <outlet property="cryptoLogo" destination="e68-JG-wz2" id="S2k-Ci-piR"/>
+                <outlet property="cryptoName" destination="oOM-in-r5f" id="00h-1i-F9Q"/>
+                <outlet property="cryptoPrice" destination="Chu-ku-TWI" id="99B-tw-Ef3"/>
+                <outlet property="cryptoSymbol" destination="OM6-li-HTZ" id="efM-SV-uas"/>
+            </connections>
+            <point key="canvasLocation" x="257.97101449275362" y="120.87053571428571"/>
         </tableViewCell>
     </objects>
 </document>
