--- a/homework-week-4-aleynamandaci/homework-week-4-aleynamandaci/TableViewCell.xib
+++ b/homework-week-4-aleynamandaci/homework-week-4-aleynamandaci/TableViewCell.xib
@@ -17,26 +17,29 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e68-JG-wz2">
-                        <rect key="frame" x="5" y="3" width="113" height="113"/>
+                        <rect key="frame" x="5" y="3" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="113" id="YVz-4t-Y5H"/>
-                            <constraint firstAttribute="width" constant="113" id="naS-wF-uMb"/>
+                            <constraint firstAttribute="height" constant="100" id="oct-15-pia"/>
+                            <constraint firstAttribute="width" constant="100" id="z6g-Kg-I6s"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oOM-in-r5f">
-                        <rect key="frame" x="133" y="10" width="59" height="30"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OM6-li-HTZ">
-                        <rect key="frame" x="138" y="60" width="64" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oOM-in-r5f">
+                        <rect key="frame" x="120" y="10" width="140" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="140" id="Mi6-ZS-W4k"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OM6-li-HTZ">
+                        <rect key="frame" x="120" y="54" width="41.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Chu-ku-TWI">
-                        <rect key="frame" x="242" y="30" width="52" height="59"/>
+                        <rect key="frame" x="275" y="30" width="52" height="26.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -49,11 +52,10 @@
                     <constraint firstItem="oOM-in-r5f" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="SvE-Ah-4Ct"/>
                     <constraint firstAttribute="bottom" secondItem="e68-JG-wz2" secondAttribute="bottom" constant="3" id="ZIY-zn-bQD"/>
                     <constraint firstItem="Chu-ku-TWI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="b82-Ug-G2K"/>
-                    <constraint firstItem="Chu-ku-TWI" firstAttribute="leading" secondItem="oOM-in-r5f" secondAttribute="trailing" constant="50" id="kmf-E7-t6U"/>
                     <constraint firstItem="e68-JG-wz2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="o8O-ez-WU4"/>
-                    <constraint firstItem="Chu-ku-TWI" firstAttribute="leading" secondItem="OM6-li-HTZ" secondAttribute="trailing" constant="40" id="w1Q-II-HBf"/>
+                    <constraint firstItem="OM6-li-HTZ" firstAttribute="leading" secondItem="e68-JG-wz2" secondAttribute="trailing" constant="15" id="s9Z-GS-zjw"/>
+                    <constraint firstItem="Chu-ku-TWI" firstAttribute="leading" secondItem="oOM-in-r5f" secondAttribute="trailing" constant="15" id="ulP-Lf-g8a"/>
                     <constraint firstItem="e68-JG-wz2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="zFd-gV-2dt"/>
-                    <constraint firstItem="OM6-li-HTZ" firstAttribute="leading" secondItem="e68-JG-wz2" secondAttribute="trailing" constant="20" id="zLQ-AM-zEI"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
